--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>my firt git try</p>
     <h1>repository</h1>
+    <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, asperiores!</pre>
 </body>
 </html>
